# Tweet-Gatherer-

./: .env.example  .gitignore  README.md  collect_tweets.sh  label_tweets.sh  pyproject.toml  run_agent.sh  sample_tweets.txt
config/: queries.yaml
docs/superpowers/plans/: 2026-06-11-auto-label-balanced-collection.md  2026-06-11-twitter-disaster-dataset-agent.md  2026-06-14-balanced-fill-collection.md
docs/superpowers/specs/: 2026-06-11-auto-label-balanced-collection-design.md  2026-06-11-twitter-disaster-dataset-agent-design.md  2026-06-14-balanced-fill-collection-design.md
research_agent/: __init__.py  auto_label.py  balancer.py  cli.py  exporter.py  http.py  images.py  importer.py  labels.py  models.py  store.py  x_api.py  xlsx.py
tests/: test_auto_label.py  test_balancer.py  test_cli.py  test_config.py  test_images_export.py  test_import_store.py  test_label_store.py  test_labels.py  test_run_script.py  test_x_api.py
