[project]
name = "research-agent"
version = "0.1.0"
description = "Local Twitter/X disaster metaphor dataset candidate collector"
requires-python = ">=3.11"
dependencies = [
  "PyYAML>=6",
]

[project.scripts]
research-agent = "research_agent.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
