[project]
name = "research-agent"
version = "0.1.0"
description = "Local Twitter/X disaster metaphor dataset candidate collector"
requires-python = ">=3.11"
dependencies = [
  "certifi>=2024",
  "PyYAML>=6",
]

[project.scripts]
research-agent = "research_agent.cli:main"

[tool.setuptools.packages.find]
include = ["research_agent*"]
exclude = ["config*", "docs*", "tests*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
